@@ -14,7 +14,8 @@ import re
 
 from pygments.util import StringIO
 from pygments.lexers.sql import PlPgsqlLexer
-from pygments.formatters import TerminalFormatter,Terminal256Formatter, HtmlFormatter, LatexFormatter
+from pygments.formatters import TerminalFormatter, Terminal256Formatter, \
+    HtmlFormatter, LatexFormatter
 
 from pygments.style import Style
 from pygments.token import Token
@@ -31,8 +32,10 @@ DEMO_TOKENS = list(DEMO_LEXER().get_tokens(DEMO_TEXT))
 
 ANSI_RE = re.compile(r'\x1b[\w\W]*?m')
 
+
 def strip_ansi(x):
     return ANSI_RE.sub('', x)
+
 
 class TerminalFormatterTest(unittest.TestCase):
     def test_reasonable_output(self):
@@ -56,22 +59,17 @@ class TerminalFormatterTest(unittest.TestCase):
             self.assertTrue(a in b)
 
 
-
-
-
-
 class MyStyle(Style):
-
     styles = {
         Token.Comment:    '#ansidarkgray',
-        Token.String:     '#ansiblue bg:#ansidarkred', 
-        Token.Number    : '#ansigreen bg:#ansidarkgreen', 
-        Token.Number.Hex: '#ansidarkgreen bg:#ansired', 
+        Token.String:     '#ansiblue bg:#ansidarkred',
+        Token.Number:     '#ansigreen bg:#ansidarkgreen',
+        Token.Number.Hex: '#ansidarkgreen bg:#ansired',
     }
 
 
-
-code = '''
+class Terminal256FormatterTest(unittest.TestCase):
+    code = '''
 # this should be a comment
 print("Hello World")
 async def function(a,b,c, *d, **kwarg:Bool)->Bool:
@@ -79,49 +77,26 @@ async def function(a,b,c, *d, **kwarg:Bool)->Bool:
     return 123, 0xb3e3
 
 '''
-_MAX_LENGTH = 80
-
-def safe_repr(obj, short=False):
-    try:
-        result = repr(obj)
-    except Exception:
-        result = object.__repr__(obj)
-    if not short or len(result) < _MAX_LENGTH:
-        return result
-    return result[:_MAX_LENGTH] + ' [truncated]...'
-
-class MyTest(unittest.TestCase):
-
-    def assertIn(self, member, container, msg=None):
-        """Just like self.assertTrue(a in b), but with a nicer default message."""
-        if member not in container:
-            standardMsg = '%s not found in %s' % (safe_repr(member),
-                                                  safe_repr(container))
-            self.fail(self._formatMessage(msg, standardMsg))
-
-
-termtest = lambda x: highlight(x, Python3Lexer(), Terminal256Formatter(style=MyStyle))
-class Terminal256FormatterTest(MyTest):
-
 
     def test_style_html(self):
         style = HtmlFormatter(style=MyStyle).get_style_defs()
-        self.assertIn('#555555',style, "ansigray for comment not html css style")
+        self.assertTrue('#555555' in style,
+                        "ansigray for comment not html css style")
 
-    def test_tex_works(self):
-        """check tex Formatter don't crash"""
-        highlight(code, Python3Lexer(), LatexFormatter(style=MyStyle))
-
-    def test_html_works(self):
-        highlight(code, Python3Lexer(), HtmlFormatter(style=MyStyle))
+    def test_others_work(self):
+        """check other formatters don't crash"""
+        highlight(self.code, Python3Lexer(), LatexFormatter(style=MyStyle))
+        highlight(self.code, Python3Lexer(), HtmlFormatter(style=MyStyle))
 
     def test_256esc_seq(self):
         """
         test that a few escape sequences are actualy used when using #ansi<> color codes
         """
-        self.assertIn('32;41',termtest('0x123'))
-        self.assertIn('32;42',termtest('123'))
-        self.assertIn('30;01',termtest('#comment'))
-        self.assertIn('34;41',termtest('"String"'))
+        def termtest(x):
+            return highlight(x, Python3Lexer(),
+                             Terminal256Formatter(style=MyStyle))
 
-        
+        self.assertTrue('32;41' in termtest('0x123'))
+        self.assertTrue('32;42' in termtest('123'))
+        self.assertTrue('30;01' in termtest('#comment'))
+        self.assertTrue('34;41' in termtest('"String"'))
